// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@radio: matches snapshot active 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot active checked 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot active checked: checked 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot active: default 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot checked 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot checked disabled 1`] = `
<Wrapper
  checked={true}
  disabled={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot default 1`] = `
<TouchableOpacity
  activeOpacity={1}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 20,
          "height": 40,
          "position": "absolute",
          "width": 40,
        }
      }
    />
    <TouchableOpacity
      activeOpacity={1}
      appearance="default"
      dispatch={[Function]}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      size="medium"
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#EDF0F4",
          "borderRadius": 12,
          "borderWidth": 1,
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        }
      }
      theme={
        Object {
          "background-color-alternative-1": "$color-basic-800",
          "background-color-alternative-2": "$color-basic-900",
          "background-color-alternative-3": "$color-basic-1000",
          "background-color-alternative-4": "$color-basic-1100",
          "background-color-default-1": "$color-basic-100",
          "background-color-default-2": "$color-basic-200",
          "background-color-default-3": "$color-basic-300",
          "background-color-default-4": "$color-basic-400",
          "background-color-primary-1": "$color-primary-500",
          "background-color-primary-2": "$color-primary-600",
          "background-color-primary-3": "$color-primary-700",
          "background-color-primary-4": "$color-primary-800",
          "border-color-alternative-1": "$color-basic-800",
          "border-color-alternative-2": "$color-basic-900",
          "border-color-alternative-3": "$color-basic-1000",
          "border-color-alternative-4": "$color-basic-1100",
          "border-color-alternative-5": "$color-basic-1100",
          "border-color-default-1": "$color-basic-100",
          "border-color-default-2": "$color-basic-200",
          "border-color-default-3": "$color-basic-300",
          "border-color-default-4": "$color-basic-400",
          "border-color-default-5": "$color-basic-500",
          "border-color-primary-1": "$color-primary-500",
          "border-color-primary-2": "$color-primary-600",
          "border-color-primary-3": "$color-primary-700",
          "border-color-primary-4": "$color-primary-800",
          "border-color-primary-5": "$color-primary-900",
          "color-basic-100": "#FFFFFF",
          "color-basic-1000": "#1A1F33",
          "color-basic-1100": "#131729",
          "color-basic-200": "#F7F8FA",
          "color-basic-300": "#EDF0F4",
          "color-basic-400": "#DDE1EB",
          "color-basic-500": "#C8CEDB",
          "color-basic-600": "#A7B0C1",
          "color-basic-700": "#657084",
          "color-basic-800": "#2E384F",
          "color-basic-900": "#232A40",
          "color-basic-active": "$color-basic-400",
          "color-basic-default": "$color-basic-200",
          "color-basic-disabled": "$color-basic-300",
          "color-basic-focus": "$color-basic-500",
          "color-danger-100": "#FFF2F2",
          "color-danger-200": "#FFD6D9",
          "color-danger-300": "#FFA8B4",
          "color-danger-400": "#FF708D",
          "color-danger-500": "#FF3D71",
          "color-danger-600": "#DB2C66",
          "color-danger-700": "#B81D5B",
          "color-danger-800": "#94124E",
          "color-danger-900": "#700940",
          "color-danger-active": "$color-danger-600",
          "color-danger-default": "$color-danger-500",
          "color-danger-disabled": "$color-danger-300",
          "color-danger-focus": "$color-danger-700",
          "color-info-100": "#F2F8FF",
          "color-info-200": "#C7E2FF",
          "color-info-300": "#94CBFF",
          "color-info-400": "#42AAFF",
          "color-info-500": "#0095FF",
          "color-info-600": "#006FD6",
          "color-info-700": "#0057C2",
          "color-info-800": "#0041A8",
          "color-info-900": "#002885",
          "color-info-active": "$color-info-600",
          "color-info-default": "$color-info-500",
          "color-info-disabled": "$color-info-300",
          "color-info-focus": "$color-info-700",
          "color-primary-100": "#F2F6FF",
          "color-primary-200": "#D9E4FF",
          "color-primary-300": "#A6C1FF",
          "color-primary-400": "#598BFF",
          "color-primary-500": "#3366FF",
          "color-primary-600": "#284DE0",
          "color-primary-700": "#2541CC",
          "color-primary-800": "#192F9E",
          "color-primary-900": "#14236E",
          "color-primary-active": "$color-primary-600",
          "color-primary-default": "$color-primary-500",
          "color-primary-disabled": "$color-primary-200",
          "color-primary-focus": "$color-primary-700",
          "color-secondary-100": "#F7F2FF",
          "color-secondary-200": "#E0D1FF",
          "color-secondary-300": "#C5A8FF",
          "color-secondary-400": "#A375FF",
          "color-secondary-500": "#884DFF",
          "color-secondary-600": "#6A39DB",
          "color-secondary-700": "#4F28B8",
          "color-secondary-800": "#371B94",
          "color-secondary-900": "#26117A",
          "color-success-100": "#EDFFF3",
          "color-success-200": "#B3FFD6",
          "color-success-300": "#8CFAC7",
          "color-success-400": "#51F0B0",
          "color-success-500": "#00E096",
          "color-success-600": "#00B383",
          "color-success-700": "#008F72",
          "color-success-800": "#007566",
          "color-success-900": "#00524C",
          "color-success-active": "$color-success-600",
          "color-success-default": "$color-success-500",
          "color-success-disabled": "$color-success-200",
          "color-success-focus": "$color-success-700",
          "color-tertiary-100": "#FFDED6",
          "color-tertiary-200": "#FFDED6",
          "color-tertiary-300": "#FFDED6",
          "color-tertiary-400": "#FFDED6",
          "color-tertiary-500": "#FFDED6",
          "color-tertiary-600": "#FFDED6",
          "color-tertiary-700": "#FFDED6",
          "color-tertiary-800": "#FFDED6",
          "color-tertiary-900": "#FFDED6",
          "color-warning-100": "#FFFDF2",
          "color-warning-200": "#FFF1C2",
          "color-warning-300": "#FFE59E",
          "color-warning-400": "#FFC94D",
          "color-warning-500": "#FFAA00",
          "color-warning-600": "#DB8B00",
          "color-warning-700": "#B86E00",
          "color-warning-800": "#945400",
          "color-warning-900": "#703C00",
          "color-warning-active": "$color-warning-600",
          "color-warning-default": "$color-warning-500",
          "color-warning-disabled": "$color-warning-300",
          "color-warning-focus": "$color-warning-700",
          "icon-color-active": "$color-primary-500",
          "icon-color-control": "$color-basic-100",
          "icon-color-default": "$color-basic-700",
          "icon-color-disabled": "$color-basic-400",
          "icon-color-hint": "$color-basic-500",
          "outline-color": "$color-basic-400",
          "text-color-alternative": "$color-basic-100",
          "text-color-control": "$color-basic-100",
          "text-color-danger": "$color-danger-default",
          "text-color-danger-active": "$color-danger-active",
          "text-color-danger-disabled": "$color-danger-disabled",
          "text-color-default": "$color-basic-1000",
          "text-color-disabled": "$color-basic-500",
          "text-color-hint": "$color-basic-600",
          "text-color-info": "$color-info-default",
          "text-color-info-active": "$color-info-active",
          "text-color-info-disabled": "$color-info-disabled",
          "text-color-primary": "$color-primary-default",
          "text-color-primary-active": "$color-primary-active",
          "text-color-primary-disabled": "$color-primary-disabled",
          "text-color-success": "$color-success-default",
          "text-color-success-active": "$color-success-active",
          "text-color-success-disabled": "$color-success-disabled",
          "text-color-warning": "$color-warning-default",
          "text-color-warning-active": "$color-warning-active",
          "text-color-warning-disabled": "$color-warning-disabled",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 8,
            "height": 16,
            "width": 16,
          }
        }
      />
    </TouchableOpacity>
  </View>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot disabled 1`] = `
<Wrapper
  disabled={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot with text (styled) 1`] = `
<Wrapper
  forwardedRef={null}
  text="Place your text"
  textStyle={
    Object {
      "fontSize": 22,
      "lineHeight": 24,
    }
  }
/>
`;
